--- a/FastTester.UI.Avalonia/Views/TestEditorView.axaml
+++ b/FastTester.UI.Avalonia/Views/TestEditorView.axaml
@@ -3,22 +3,31 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="FastTester.UI.Avalonia.Views.TestEditorView">
+             x:Class="FastTester.UI.Avalonia.Views.TestEditorView"
+			 xmlns:view="clr-namespace:FastTester.UI.Avalonia.Views"
+			 xmlns:vm="clr-namespace:FastTester.UI.Avalonia.ViewModels"
+			 x:DataType="vm:TestContentVM"
+			 >
+	<Design.DataContext>
+		<vm:TestContentVM/>
+	</Design.DataContext>
+	
 	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition/>
-		</Grid.RowDefinitions>
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="70*"/>
 			<ColumnDefinition Width="30*"/>
 		</Grid.ColumnDefinitions>
 
-		<ListBox x:Name="ListBox_QuestionsList" Grid.Row="0" Grid.Column="0">
-			<ListBoxItem>
-				<!--<item:QuestionListItem/>-->
-			</ListBoxItem>
-		</ListBox>
-
+		<Grid Grid.Column="0" Background="#2b2b2b">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="10*"/>
+				<RowDefinition Height="90*"/>
+			</Grid.RowDefinitions>
+			<TextBox Text="{Binding TestName}" Background="MediumPurple" Margin="3" Grid.Row="0" AcceptsReturn="True" TextWrapping="Wrap"/>
+			<ListBox x:Name="ListBox_QuestionsList" Grid.Row="1">
+			</ListBox>
+		</Grid>
+		
 		<Grid Grid.Column="1">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="10*"/>
@@ -26,7 +35,12 @@
 			</Grid.RowDefinitions>
 
 			<StackPanel Grid.Row="0" Margin="1">
-				<Button Content="Load from file" Click="Click_FileLoad" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"/>
+				<Button Content="Load from file" Click="Click_FileLoad" HorizontalAlignment="Stretch" 
+						HorizontalContentAlignment="Center"/>
+				<Button x:Name="Button_SaveTest" Content="Save test" IsEnabled="{Binding Item.IsTestComplete}"  
+						Click="Click_SaveTest" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"/>
+				<Button Content="Debug" Click="Click_Debug" HorizontalAlignment="Stretch" 
+						HorizontalContentAlignment="Center"/>
 			</StackPanel>
 
 			<Button Grid.Row="1" Margin="1" Content="Back" Click="Click_Back" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center"/>
